Validation working, auth0 working
