# models/patterns.js
@@ -1,21 +1,0 @@
-module.exports = (mongoose) => {
-    const Pattern = mongoose.model(
-      'patterns',
-      mongoose.Schema({
-        patternName: {
-          type: String
-        },
-        patternLink: {
-          type: String
-        },
-        weight: {
-          type: Number,
-        },
-        fiberType: {
-          type: String
-        },
-      })
-    );
-  
-    return Pattern;
-  };
